Fix subtitle on landing component so that it is visible. Fix overflow-y issue on collection preview page.

--- a/client/src/components/collection-preview/collection-preview.styles.scss
+++ b/client/src/components/collection-preview/collection-preview.styles.scss
@@ -13,6 +13,7 @@
     display: flex;
     align-items: center;
     overflow-x: auto;
+    overflow-y: hidden;
     padding-bottom: 1rem;
   }
 
