--- a/client/src/components/landing/landing.styles.scss
+++ b/client/src/components/landing/landing.styles.scss
@@ -47,7 +47,7 @@
     color: var(--accent-50);
 
     // name / duration / function / delay / iterations / direction
-    animation: fadeInUp 1s ease 0 1 forwards;
+    animation: fadeInUp 1s ease 0s 1 forwards;
   }
 
   .landing-title {
